Fixed the layout issue once and for all!

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -41,6 +41,11 @@
   --space-24: 6rem;
 }
 
+html,
+body {
+  overflow-x: hidden;
+}
+
 html {
   font-size: 16px;
   scroll-behavior: smooth;
